# kargat

./: .gitignore  README.md  pyproject.toml
src/kargat/: __main__.py
src/kargat/pm/: __init__.py  base_manager.py  command_manager.py  config.py  config_manager.py  env_manager.py  package_manager.py
src/kargat/test/: test_package_manager.py
